Updated text on homepage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
       <header role="banner">
         <h1 id="welcome">Hi&nbsp;there,&nbsp;I'm&nbsp;Zoe&nbsp;!</h1>
-        <h3>Full-stack web developer.</h3>
+        <h3>Aspiring full-stack web dev.</h3>
       </header>
     </div>
 
@@ -57,11 +57,11 @@
       <section class="Intro">
         <h4>Introduction</h4>
         <p>
-          Hi. I’m Zoe and I graduated from UC Berkeley in 2019. In my free time,
-          I like to code and understand products. The intersection of technology
-          and productivity facinates me and I’m interested in building tools to
-          alleviate the mundane tasks in order to get to the most essential
-          highlight of the day.
+          Hi. I’m Zoe and I graduated from UC Berkeley in Spring 2018. In my
+          free time, I like to code and understand products. The intersection of
+          technology and productivity facinates me and I’m interested in
+          building tools to alleviate the mundane tasks in order to get to the
+          most essential highlight of the day.
         </p>
       </section>
 
@@ -69,11 +69,11 @@
         <h4>Projects</h4>
         <div class="proj1">
           <img src="" />
-          <p>This is my first project.</p>
+          <p>Under construction.</p>
         </div>
         <div class="proj2">
           <img src="" />
-          <p>This is my 2nd project.</p>
+          <p>Patience my friend.</p>
         </div>
       </section>
 
